--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <h1>Wlcome to my Weather App</h1>
-    <footer>Coded by Thikolelwi Netshiongolwe</footer>
+    <footer>Coded by 
+        <a href= "https://github.com/Thiko123" target="_blank">Thikolelwi Netshiongolwe </a>, code hosted on 
+        <a href="https://github.com/Thiko123/WeatherApp-Week7-SheCodes" target="_blank"> GitHub</a> , and website hosted
+        <a href="https://app.netlify.com/teams/thiko123/overview" target="_blank"> on Netlify</a>
+    </footer>
 </body>
 </html>
