--- a/index.html
+++ b/index.html
@@ -6,6 +6,27 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
+        <form>
+            <input type="search" placeholder="Enter a City..." required/>
+            <input type="submit" value="Search"/>
+        </form>
+
+    </header>
+    <main>
+        <div>
+            <h1>Paris</h1>
+            <p>
+              Tuesday 14:49, scattered clouds
+              <br />
+              Humidity: 66%, Wind: 3.13km/h
+            </p>
+        </div>
+        <div>
+            🌤️ 12°C
+        </div>
+
+    </main>
     <h1>Wlcome to my Weather App</h1>
     <footer>Coded by 
         <a href= "https://github.com/Thiko123" target="_blank">Thikolelwi Netshiongolwe </a>, code hosted on 
