--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="src/style.css"/>
     <title>Document</title>
 </head>
 <body>
+    <div class="weather-app">
     <header>
         <form>
             <input type="search" placeholder="Enter a City..." required/>
@@ -33,5 +35,6 @@
         <a href="https://github.com/Thiko123/WeatherApp-Week7-SheCodes" target="_blank"> GitHub</a> , and website hosted
         <a href="https://app.netlify.com/teams/thiko123/overview" target="_blank"> on Netlify</a>
     </footer>
+    </div>
 </body>
 </html>
