--- a/index.html
+++ b/index.html
@@ -16,18 +16,21 @@
 
     </header>
     <main>
+        <div class="weather-app-data">
         <div>
-            <h1>Paris</h1>
-            <p>
+            <h1 class="weather-app-city">Paris</h1>
+            <p class="weather-app-details">
               Tuesday 14:49, scattered clouds
               <br />
-              Humidity: 66%, Wind: 3.13km/h
+              Humidity:<strong class="strong"> 66%</strong>, Wind:<strong class="strong"> 3.13km/h</strong>
             </p>
         </div>
-        <div>
-            🌤️ 12°C
+        <div class="weather-app-temperature-container">
+            <div class="weather-app-icon" >🌤️</div> 
+            <div class="weather-app-temperature">12</div>
+            <div class="weather-app-unit">°C</div>
         </div>
-
+        </div>
     </main>
     <footer>
         Coded by 
