--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <div class="weather-app">
     <header>
-        <form class="search-form">
-            <input type="search" placeholder="Enter a City..." required class="search-form-input"/>
+        <form class="search-form" id="search-form">
+            <input type="search" placeholder="Enter a City..." required class="search-form-input" id="search-form-input"/>
             <input type="submit" value="Search" class="search-form-button"/>
         </form>
 
@@ -18,7 +18,7 @@
     <main>
         <div class="weather-app-data">
         <div>
-            <h1 class="weather-app-city">Paris</h1>
+            <h1 class="weather-app-city" id="city">Paris</h1>
             <p class="weather-app-details">
               Tuesday 14:49, scattered clouds
               <br />
@@ -39,5 +39,6 @@
         <a href="https://app.netlify.com/teams/thiko123/overview" target="_blank"> on Netlify</a>
     </footer>
     </div>
+    <script src="src/index.js"></script>
 </body>
 </html>
