--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         <div>
             <h1 class="weather-app-city" id="city">Paris</h1>
             <p class="weather-app-details">
-              Tuesday 14:49, scattered clouds
+              <span id="time"></span>, <span id="description">scattered clouds</span>
               <br />
-              Humidity:<strong class="strong"> 66%</strong>, Wind:<strong class="strong"> 3.13km/h</strong>
+              Humidity:<strong class="strong" id="Humidity"> 66%</strong>, Wind:<strong class="strong" id="Wind"> 3.13km/h</strong>
             </p>
         </div>
         <div class="weather-app-temperature-container">
