added the forecast

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div>
             <h1 class="weather-app-city" id="city">Paris</h1>
             <p class="weather-app-details">
-              <span id="time"></span>, <span id="description">scattered clouds</span>
+              <span id="time">Monday 14:34</span>, <span id="description">scattered clouds</span>
               <br />
               Humidity:<strong class="strong" id="Humidity"> 66%</strong>, Wind:<strong class="strong" id="Wind"> 3.13km/h</strong>
             </p>
@@ -32,6 +32,9 @@
             <div class="weather-app-unit">°C</div>
         </div>
         </div>
+        <div class="weather-forecast" id="forecast">
+        </div>
+            
     </main>
     <footer>
         Coded by 
